# ObjectSerialization

./: CMakeLists.txt  README.md
include/: XML.h  base64.h  binary.h
src/: base64.cpp  main.cpp
